# odin

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  TODO.md  docker-compose.yml  manage.py  opencode.json  pyproject.toml  requirements.txt
.github/workflows/: checks.yml
.zed/: debug.json  tasks.json
configs/: crontab.conf  gunicorn.service  nginx.conf  proxy.params  scheduler.service  sensor-consumer.service  worker.service
db_benchmarks/core/: apps.py  asgi.py  models.py  settings.py  urls.py  wsgi.py
db_benchmarks/core/migrations/: 0001_initial.py
db_benchmarks/tests/: factories.py  test_models.py
deploy/: gunicorn.service  host.conf  nginx.conf
odin/: asgi.py  urls.py  wsgi.py
odin/api/: authentication.py  urls.py
odin/api/utils/: serializers.py
odin/api/v1/: urls.py
odin/api/v1/core/: serializers.py  urls.py  views.py
odin/api/v1/relays/: serializers.py  urls.py  views.py
odin/api/v1/sensors/: serializers.py  urls.py  views.py
odin/apps/core/: admin.py  apps.py  exceptions.py  kafka.py  models.py  push.py  scheduler.py  services.py  translations.py  utils.py  views.py  webpush.py
odin/apps/core/management/commands/: generate_favicons.py  generate_vapid_keys.py  scheduler.py
odin/apps/core/migrations/: 0001_initial.py  0002_device.py  0003_device_is_admin.py  0004_add_stacktrace_and_variables_to_log.py  0005_auth.py  0006_auth_user_fk.py
odin/apps/core/templatetags/: core_tags.py
odin/apps/currency/: admin.py  apps.py  models.py  services.py
odin/apps/currency/management/commands/: update_exchange_rates.py
odin/apps/currency/migrations/: 0001_initial.py
odin/apps/currency/templatetags/: currency_tags.py
odin/apps/electricity/: admin.py  apps.py  models.py
odin/apps/electricity/management/commands/: update_voltage.py
odin/apps/electricity/migrations/: 0001_initial.py
odin/apps/home/: apps.py  views.py
odin/apps/music/: admin.py  apps.py  models.py  services.py
odin/apps/music/management/commands/: scan_music.py
odin/apps/music/migrations/: 0001_initial.py
odin/apps/provider/: __init__.py  admin.py  apps.py  context_processors.py  models.py
odin/apps/provider/management/: __init__.py
odin/apps/provider/management/commands/: fetch_traffic.py  fetch_unet_traffic.py  scrape_traffic.py  scrape_unet_traffic.py  update_traffic.py
odin/apps/provider/migrations/: 0001_initial.py
odin/apps/provider/tests/: test_commands.py  test_models.py
odin/apps/relays/: admin.py  apps.py  models.py  services.py
odin/apps/relays/migrations/: 0001_initial.py  0002_alter_relay_context_alter_relay_created_at_and_more.py  0003_alter_relay_relay_id.py  0004_relay_force_state.py  0005_convert_schedule_to_periodic.py
odin/apps/relays/templatetags/: relay_tags.py
odin/apps/sensors/: admin.py  apps.py  models.py  services.py  urls.py  views.py
odin/apps/sensors/management/commands/: consume_sensors.py  send_sensors.py  update_sensors.py
odin/apps/sensors/migrations/: 0001_initial.py  0002_sensor_synced_at.py  0003_synclog.py  0004_rawsensor_remove_sensor_external_id_and_more.py  0005_rename_sensor_sensorlog_delete_synclog_and_more.py  0006_sensor.py  0007_sensor_is_active.py  0008_alter_sensorlog_options.py  0009_rename_created_at_sensorlog_synced_at.py  0010_rename_updated_at_sensorlog_created_at.py  0011_alter_sensorlog_created_at.py  0012_alter_sensor_context_alter_sensor_created_at_and_more.py  0013_sensor_relay_id_alter_sensor_sensor_id.py  0014_sensor_humidity_offset_sensor_temp_offset.py  0015_sensor_order.py
odin/apps/weather/: admin.py  apps.py  models.py
odin/apps/weather/management/commands/: update_weather.py
odin/apps/weather/migrations/: 0001_initial.py
odin/apps/weather/templatetags/: weather_tags.py
odin/locale/be/LC_MESSAGES/: django.mo  django.po
odin/locale/ru/LC_MESSAGES/: django.mo  django.po
odin/settings/: base.py  dev.py  prod.py  sqlite.py  test.py
odin/static/: manifest.json
odin/static/css/: base.css  chart.css  ds18b20.css  fonts.css  header.css  home.css  index.css  modal.css
odin/static/css/admin/: schedule.css
odin/static/css/index/: base.css  boiler-room.css  currency.css  errors.css  misc.css  sensors.css  voltage.css  weather.css
odin/static/css/responsive/: index.css  large-tablet.css  mobile.css  small-tablet.css  tablet.css
odin/static/js/: chart.js  ds18b20.js  index.js  pwa.js  sw.js
odin/static/js/admin/: schedule.js
odin/templates/: base.html  chart.html  ds18b20.html  header.html  index.html  modal.html
odin/templates/admin/: index.html  schedule.html  select_filter.html
odin/tests/: conftest.py  factories.py  test_provider.py  test_traffic_context.py
odin/tests/admin/: test_device_admin.py  test_relay_admin.py
odin/tests/api/: test_auth.py  test_healthcheck.py  test_logs.py  test_push.py  test_relays.py  test_sensor_data.py  test_sensor_logs.py  test_sensors.py
odin/tests/apps/: test_provider.py
odin/tests/commands/: test_fetch_traffic.py
odin/tests/management/: test_scrape_unet_traffic.py
odin/tests/models/: test_device.py  test_provider.py  test_relays.py  test_traffic.py
odin/tests/provider/: test_traffic.py
odin/tests/services/: test_context.py  test_exchange_rates.py  test_kafka.py  test_provider_command.py  test_provider_context.py  test_push.py  test_webpush.py
odin/tests/views/: test_admin.py  test_dashboard.py  test_home.py  test_index.py  test_index_context.py  test_relays.py  test_views.py
