[project]
name = "odin"
version = "1.11.0"
description = "Django application that provides several IoT dashboards and services for Coruscant and Centax projects."
readme = "README.md"
requires-python = ">=3.13.6,<3.14.0"
dependencies = [
    "django==6.0.4",
    "django-apscheduler==0.7.0",
    "django-command-log==2.3.0",
    "django-redis==6.0.0",
    "django-rq==4.1.0",
    "djangorestframework==3.17.1",
    "gunicorn>=25.3.0,<26",
    "ipython>=9.13.0",
    "kafka-python>=2.3.1,<3",
    "pillow>=12.2.0,<13",
    "pre-commit>=4.6.0",
    "psycopg2-binary>=2.9.12,<3",
    "pytz>=2026.1.post1",
    "pywebpush>=2.3.0,<3",
    "requests>=2.33.1,<3",
    "ruff>=0.15.12",
    "selenium>=4.43.0,<5",
    "setuptools>=82.0.1",
    "tinytag>=2.2.1,<3",
    "ty>=0.0.32",
    "uvicorn[standard]>=0.46.0,<1",
]

[dependency-groups]
dev = [
    "debugpy>=1.8.20",
    "pytest>=9.0.3",
    "pytest-django>=4.12.0",
    "pytest-factoryboy>=2.8.1",
    "uv-bump>=0.5.0",
]

[tool.pytest.ini_options]
log_cli = true
log_cli_format = "%(levelname)s %(asctime)s %(message)s"
django_find_project = true
addopts = '-p no:warnings --color=yes --ds=odin.settings.test'
norecursedirs = '''
.git
.github
.pytest_cache
.ruff_cache
.venv
'''

[tool.bandit]
exclude_dirs = [
    "odin/settings/",
    "odin/tests/"
]
skips = ["B101", "B308", "B703"]

[tool.curlylint.rules]
indent = 2
html_has_lang = true

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py313"
exclude = [
    "odin/settings/"
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "F",  # Pyflakes
    "N",  # pep8-naming
    "UP",  # pyupgrade
    "B",  # flake8-bugbear
    "S",  # flake8-bandit
    "BLE",  # flake8-blind-except
    "A",  # flake8-builtins
    "DJ",  # flake8-django
    "I",  # isort
    "INP",  # flake8-no-pep420
    "RUF"  # Ruff-specific rules
]
exclude = [
    ".git",
    ".idea",
    ".vscode",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
]
ignore = [
    "DJ001", # Null values for model char fields
    "ERA001",  # Disable eradicate (commented code removal)
    # Disable Conflicting lint rules,
    # see https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "W191",
    "E501",
    "E111",
    "E117",
    "D206",
    "D300",
    "N818",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "COM812",
    "COM819",
    "ISC001",
    "ISC002",
    "S603",
    # Disable unused `noqa` directive
    "RUF100",
    "RUF012",  # Mutable class attributes should be annotated with `typing.ClassVar`
    "N806",  # Variable `CONSTANT_NAME` in function should be lowercase
]

[tool.ruff.lint.pycodestyle]
ignore-overlong-task-comments = true

[tool.ruff.lint.isort]
section-order = ["future", "standard-library", "third-party", "first-party", "django", "odin", "local-folder"]
lines-after-imports = 2

[tool.ruff.lint.isort.sections]
"django" = ["django", "apscheduler", "django_apscheduler", "django_rq", "command_log", "rest_framework"]
"odin" = ["odin"]

[tool.ruff.lint.per-file-ignores]
# Ignore "E402", "F403", "F405" (import violations) in __init__.py files.
# Ignore "S" (flake8-bandit) and "N802" (function name should be lowercase) in tests and docs.
# Ignore "RUF" (Ruff-specific rules) and "I" (isort) in migrations.
"__init__.py" = ["E402", "F403", "F405"]
"**/{tests,docs}/*" = ["E402", "F403", "F405", "S", "N802", "N815"]
"**/*test*.py" = ["E402", "F403", "F405", "S", "N802"]
"**/{settings}/*" = ["E402", "F403", "F405"]
"**/migrations/*" = ["RUF", "I"]

[tool.ty.src]
exclude = [
    ".git",
    ".idea",
    ".vscode",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "odin/settings/",
    "odin/tests/"
]
